# backyard

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.claude/workflows/: judge-content.js
.github/workflows/: ci.yml  measure-transcode.yml
caddy/: Caddyfile  Caddyfile.prod
docs/: PATH-TO-100.md  PR-FAQ.md  assumptions.md  family-privacy-note.md  metrics.md  principles.md  story-map.md  wave-plan.md
docs/adr/: ADR-000-license.md  ADR-001-name.md  ADR-002-stack.md  ADR-003-token-links.md  ADR-004-rls.md  ADR-005-batched-defaults.md
docs/design/: claude-design-brief.md  claude-design-kickoff-prompt.md
docs/devlog/: 0001-day-zero.md
docs/receipts/: 2026-07-20-branch-protection.md  2026-07-20-compose-first-admin.md  2026-07-20-secrets-scan.md  2026-07-20-wave-1-close.md  2026-07-20-wave-2-close.md  2026-07-21-s201-household-invite-close.md  2026-07-21-s301-preview-image-rehost-close.md  2026-07-21-wave-3-close.md  2026-07-21-wave-4-buildable-complete.md  2026-07-21-wave-5-close.md  2026-07-22-design-v2-claude-design-apply.md  2026-07-22-s101-onboarding-close.md  2026-07-22-s212-s213-new-elder-handover-close.md  2026-07-22-s5-tested-passing-loop.md  2026-07-22-s707-s708-rollout-enablers-close.md  2026-07-22-s713-takedown-close.md  2026-07-22-s720-design-system-pass.md  2026-07-22-s724-baseline-csp.md  2026-07-22-s725-ssrf-fetch-relocation.md  2026-07-22-s726-dep-scan-sast.md  2026-07-22-s727-restore-security-replay-close.md  2026-07-22-s728-persistent-instance.md  2026-07-22-wave-4-close.md
docs/research/: 2026-07-19-github-oss-landscape.md  2026-07-19-naming-decision.md  2026-07-19-research-brief.md  2026-07-20-founder-knowledge-capture.md  2026-07-20-stack-dossier.md  2026-07-20-voc-sweep.md
docs/retro/: 2026-07-22-phase-2-retro.md
docs/runbooks/: backup-restore.md  live-repro.md  measure-transcode.md
docs/security/: permission-matrix.md  story-deltas.json  threat-model.md
postgres/initdb/: 01-roles.sh
scripts/: check_digest_confinement.py  check_stories.py
src/: conftest.py
src/config/: email_guard.py  log_redaction.py  settings.py  urls.py  wsgi.py
src/core/: adapters.py  admin_views.py  apps.py  backups.py  breakglass.py  commenting.py  digest.py  digest_links.py  digest_send.py  digest_views.py  digesting.py  digesting_views.py  elder_tokens.py  elder_views.py  emailing.py  export.py  feed_views.py  handover.py  inbound.py  inbound_webhook.py  invites.py  join.py  link_preview.py  mail_sources.py  media.py  media_views.py  metrics.py  middleware.py  models.py  moderation.py  notifications.py  permissions.py  pod_views.py  pods.py  posting.py  profile_views.py  profiles.py  provisioning_views.py  pwa_views.py  reacting.py  (+9 more)
src/core/migrations/: 0001_initial.py  0002_pods_and_yards.py  0003_invites.py  0004_cache_table.py  0005_post.py  0006_member_feed_last_seen_at.py  0007_comment.py  0008_linkpreview.py  0009_notificationpreference_reaction.py  0010_pod_house_rule_pod_owner_podmute.py  0011_member_address_member_address_visibility_and_more.py  0012_mediaasset.py  0013_member_dates_visibility.py  0014_digestissue_digestdelivery_digestsubscription_and_more.py  0015_digesttoken.py  0016_comment_via_email_inboundledger_inboundquarantine_and_more.py  0017_digesttoken_first_used_at_memberweekpresence_and_more.py  0018_eldertoken.py  0019_mediaasset_video.py  0020_linkpreview_image_asset_alter_mediaasset_media_kind.py  0021_comment_moderated_by_post_moderated_by.py
src/core/tests/: test_admin_views.py  test_archive_compat.py  test_auth_config.py  test_backups.py  test_break_glass.py  test_comments.py  test_csp.py  test_design_system_wcag.py  test_digest.py  test_digest_links.py  test_digest_send.py  test_digesting.py  test_elder_tokens.py  test_elder_wcag.py  test_emailing.py  test_export.py  test_feed.py  test_inbound.py  test_inbound_webhook.py  test_invite_household.py  test_invites.py  test_isolation.py  test_isolation_registry.py  test_join.py  test_link_preview.py  test_media.py  test_metrics.py  test_moderation.py  test_new_elder.py  test_notifications.py  (+18 more)
stories/: schema.md  stories.yaml
(+46 files in other folders)
