[project]
name = "backyard"
version = "0.1.0.dev0"
description = "A private, self-hosted social network for your extended family"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
dependencies = [
  "django>=5.2,<5.3",           # 5.2 LTS, extended support to 2028-04 (ADR-002)
  "django-allauth[mfa]>=65.14,<66",
  "gunicorn>=23,<24",
  "pillow>=11,<12",             # photo ingest: re-encode + metadata strip (S-401, TM-9)
  "psycopg[binary]>=3.2,<4",
  "procrastinate[django]>=3,<4", # Postgres-native job queue + worker (ADR-002)
  "qrcode>=8,<9",               # elder-token handover QR (S-104); SVG factory, no PIL/JS
  "whitenoise>=6.12,<7",
  "django-anymail[resend]>=15,<16", # Resend send + inbound (v15 added Resend inbound); svix verifies webhooks
]

[dependency-groups]
dev = [
  "django-stubs[compatible-mypy]>=5.2,<6",
  "mypy>=1.15,<2",
  "pytest>=8.4,<9",
  "pytest-django>=4.11,<5",
  "pytest-playwright>=0.7,<1", # S-101 cross-browser mobile onboarding e2e (WebKit=iOS Safari, Chromium=Android Chrome)
  "ruff>=0.14,<1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
# Explain WHY, not WHAT (house rule): keep the set small and load-bearing.
select = ["E", "F", "I", "UP", "B", "DJ", "S"]
# S101 assert-in-tests is fine; DJ handled per-file below.
[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106", "S107", "S603", "S607", "S404"]  # asserts, test creds, ffmpeg subprocess
"src/config/settings.py" = ["S105"]  # placeholder-secret detection is done in code, not by ruff
"src/core/backups.py" = ["S607"]  # pg_dump/pg_restore invoked by name from the container PATH (postgresql-client-18)
"src/core/management/commands/measure_transcode.py" = ["S607"]  # ffmpeg invoked by name from PATH

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["mypy_django_plugin.main"]
mypy_path = "src"
explicit_package_bases = true

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = ["whitenoise.*", "gunicorn.*", "allauth.*", "anymail.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
testpaths = ["src"]
python_files = ["test_*.py", "tests.py"]
# The mobile onboarding e2e (S-101) drives real browser engines and is excluded from the
# default unit run (which has no browsers); it runs in its own CI job via `pytest -m e2e`.
addopts = "-m 'not e2e'"
markers = ["e2e: real-browser end-to-end test (needs Playwright browsers + a live server)"]

[tool.uv]
package = false
